# ttf-parser

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  test-all.sh
.github/workflows/: main.yml
benches/: Cargo.toml  README.md  methods_perf.rs  methods_perf_x1000.rs  outline.rs
benches/outline/: README.md  meson.build  outline.cc
benches/outline/subprojects/: google-benchmark.wrap  stb_truetype.wrap
c-api/: Cargo.toml  README.md  cbindgen.toml  lib.rs  test.c  ttfparser.h
examples/: font-info.rs  font2svg.rs
examples/wasm/: README.md  index.html
fonts/: README.md
scripts/: gen-tables.py  gen-tables.sh  gen-tables2.py
src/: aat.rs  avar.rs  cff.rs  cff2.rs  cmap.rs  delta_set.rs  fvar.rs  gdef.rs  ggg.rs  glyf.rs  gpos.rs  gsub.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  kern.rs  language.rs  lib.rs  loca.rs  mvar.rs  name.rs  os2.rs  parser.rs  post.rs  raw.rs  stream.rs  var_store.rs  vhea.rs  vmtx.rs  vorg.rs  vvar.rs  writer.rs
src/ggg/: chained_context.rs  context.rs  feature_variations.rs  layout_table.rs  lookup.rs  mod.rs
src/tables/: ankr.rs  avar.rs  cbdt.rs  cblc.rs  cff.rs  cff2.rs  cmap.rs  colr.rs  cpal.rs  ebdt.rs  eblc.rs  feat.rs  fvar.rs  gdef.rs  glyf.rs  gpos.rs  gsub.rs  gvar.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  kern.rs  kerx.rs  loca.rs  math.rs  maxp.rs  mod.rs  morx.rs  mvar.rs  name.rs  os2.rs  post.rs  sbix.rs  stat.rs  svg.rs  trak.rs  vhea.rs  vorg.rs  vvar.rs  (+1 more)
src/tables/cff/: cff1.rs  cff2.rs  charset.rs  charstring.rs  dict.rs  encoding.rs  index.rs  mod.rs
src/tables/cmap/: format0.rs  format10.rs  format12.rs  format13.rs  format14.rs  format2.rs  format4.rs  format6.rs  mod.rs
src/tables/os2/: mod.rs  panose.rs
testing-tools/font-view/: README.md  font-view.pro  glyph.h  glyphsview.cpp  mainwindow.cpp  ttfparserfont.cpp  ttfparserfont.h
testing-tools/ttf-fuzz/: Cargo.toml  README.md
testing-tools/ttf-fuzz/src/: fuzz-cmap.rs  fuzz-glyph-index.rs  fuzz-name.rs  fuzz-outline.rs  fuzz-variable-outline.rs
tests/: bitmap.rs  tests.rs
tests/fonts/: README.md
tests/fonts-src/: README.md  cmap-10.ttx  cmap-6.ttx  glyphs.ttx  invalid-em.ttx  os2-invalid-width.ttx  os2-v0.ttx  vmtx.ttx
tests/tables/: aat.rs  ankr.rs  cff1.rs  cmap.rs  colr.rs  feat.rs  glyf.rs  hmtx.rs  main.rs  maxp.rs  panose.rs  sbix.rs  trak.rs
