[package]
name = "ttf-parser"
version = "0.9.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["ttf", "truetype", "opentype"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
description = "A high-level, safe, zero-allocation TrueType font parser."
repository = "https://github.com/RazrFalcon/ttf-parser"
documentation = "https://docs.rs/ttf-parser/"
readme = "README.md"
edition = "2018"
exclude = ["benches/**"]

[features]
default = ["std", "variable-fonts"]
std = []
# Enables variable fonts support. Increases the binary size almost twice.
variable-fonts = []

[dev-dependencies]
base64 = "0.12"
pico-args = "0.3.1"
svgtypes = "0.5"
xmlwriter = "0.1"
