[package]
name = "ttf-parser"
version = "0.12.3"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["ttf", "truetype", "opentype"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
description = "A high-level, safe, zero-allocation TrueType font parser."
repository = "https://github.com/RazrFalcon/ttf-parser"
documentation = "https://docs.rs/ttf-parser/"
readme = "README.md"
edition = "2018"
exclude = ["benches/**"]

[features]
default = ["std", "opentype-layout", "variable-fonts"]
std = []
# Enables variable fonts support. Increases binary size almost twice.
# Includes avar, CFF2, fvar, gvar, HVAR, MVAR and VVAR tables.
variable-fonts = []
# Enables GDEF, GPOS and GSUB tables.
opentype-layout = []

[dev-dependencies]
base64 = "0.12"
pico-args = "0.3.1"
svgtypes = "0.5"
xmlwriter = "0.1"
