[package]
name = "ttf-parser-capi"
version = "0.8.2"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "ttfparser"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ttf-parser = { path = "../", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
