[package]
name = "ttf-parser-capi"
version = "0.12.3"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "ttfparser"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ttf-parser = { path = "../", default-features = false, features = ["std"] }

[features]
default = ["variable-fonts"]
# Enables variable fonts support. Adds about 50KiB.
variable-fonts = ["ttf-parser/variable-fonts"]

[profile.release]
lto = true
