[package]
name = "ttf-parser-capi"
version = "0.13.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "ttfparser"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ttf-parser = { path = "../", default-features = false, features = ["std", "glyph-names"] }

[features]
default = ["variable-fonts"]
# Enables variable fonts support. Adds about 50KiB.
variable-fonts = ["ttf-parser/variable-fonts"]
# Enable allocation
alloc = ["ttf-parser/alloc"]
# opentype-layout is not supported.

[profile.release]
lto = true
